--- a/themes/bookStacked/scss/_tiki-selectors.scss
+++ b/themes/bookStacked/scss/_tiki-selectors.scss
@@ -38,12 +38,10 @@ body:not(.tiki-admin) .col1 {
             padding: 32px 16px;
             position: var(--tiki-bookstacked-col2-col3-position); // sticky;
             top: 0;
-            max-height: 100vh;
-            min-height: 70vh;
+            max-height: 70vh;
             height: 100%;
             overflow-y: var(--tiki-bookstacked-col2-col3-overflow-y); // auto;
-            //          overflow-x: visible;
-            scrollbar-width: none;
+            overflow-x: hidden;
             //          -ms-overflow-style: none;
         }
     }
